--- a/easteregg.html
+++ b/easteregg.html
@@ -32,7 +32,8 @@
     <br><br>
 </section>
     <br><br><br><br><br><br><br><br><br><br><br><br><br>
-</body>
 <footer>
     <br><br><br><br><br><br>
 </footer>
+</body>
+</html>
