--- a/Tarefa_Artista.html
+++ b/Tarefa_Artista.html
@@ -22,7 +22,7 @@
 </style>
 <body>
     <header>   
-        <a href="file:///C:/Users/nicol/VS%20Studio/Aula2/easteregg.html">
+        <a href="http://127.0.0.1:5500/Aula2/easteregg.html">
         <img src="https://img.freepik.com/fotos-gratis/superficie-abstrata-e-texturas-de-parede-de-pedra-branca-de-concreta_74190-8189.jpg?size=626&ext=jpg&ga=GA1.1.1395880969.1709856000&semt=ais" height="0.5";>
         </a>
         <center><u><h1>RAUL SEIXAS</h1></u></center>
